--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Js TO_DO_APP with LocalStorage</title>
     <!-- fontasome css -->
-    <link rel="stylesheet" href="./fontawesome-free-5.9.0-web/css/all.min.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <!-- style css -->
     <link rel="stylesheet" href="./style.css">
 </head>
